parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> DeclList FuncList
Rule 2     Program -> DeclList
Rule 3     Program -> FuncList
Rule 4     Program -> <empty>
Rule 5     DeclList -> Declaration
Rule 6     DeclList -> DeclList Declaration
Rule 7     FuncList -> Function
Rule 8     FuncList -> FuncList Function
Rule 9     Declaration -> Type IdentList SEMICOLON
Rule 10    IdentList -> identifier
Rule 11    IdentList -> IdentList COMMA identifier
Rule 12    identifier -> ID
Rule 13    identifier -> ID LBRK INTNUM RBRK
Rule 14    Function -> Type ID LPAREN RPAREN CompoundStmt
Rule 15    Function -> Type ID LPAREN ParamList RPAREN CompoundStmt
Rule 16    ParamList -> Type identifier
Rule 17    ParamList -> ParamList COMMA Type identifier
Rule 18    Type -> INT
Rule 19    Type -> FLOAT
Rule 20    CompoundStmt -> LBRACE DeclList StmtList RBRACE
Rule 21    CompoundStmt -> LBRACE StmtList RBRACE
Rule 22    StmtList -> Stmt StmtList
Rule 23    StmtList -> <empty>
Rule 24    Stmt -> AssignStmt
Rule 25    Stmt -> CallStmt
Rule 26    Stmt -> RetStmt
Rule 27    Stmt -> WhileStmt
Rule 28    Stmt -> ForStmt
Rule 29    Stmt -> IfStmt
Rule 30    Stmt -> SwitchStmt
Rule 31    Stmt -> CompoundStmt
Rule 32    Stmt -> SEMICOLON
Rule 33    AssignStmt -> Assign SEMICOLON
Rule 34    Assign -> ID EQUALS Expr
Rule 35    Assign -> ID LBRK Expr RBRK EQUALS Expr
Rule 36    CallStmt -> Call SEMICOLON
Rule 37    Call -> ID LPAREN ArgList RPAREN
Rule 38    Call -> ID LPAREN RPAREN
Rule 39    RetStmt -> RETURN SEMICOLON
Rule 40    RetStmt -> RETURN Expr SEMICOLON
Rule 41    WhileStmt -> WHILE LPAREN Expr RPAREN Stmt
Rule 42    WhileStmt -> DO Stmt WHILE LPAREN Expr RPAREN SEMICOLON
Rule 43    ForStmt -> FOR LPAREN Assign SEMICOLON Expr SEMICOLON Assign RPAREN Stmt
Rule 44    IfStmt -> IF LPAREN Expr RPAREN Stmt
Rule 45    IfStmt -> IF LPAREN Expr RPAREN Stmt ELSE Stmt
Rule 46    SwitchStmt -> SWITCH LPAREN identifier RPAREN LBRACE CaseList RBRACE
Rule 47    CaseList -> CaseList CASE INTNUM COLON StmtList BREAK SEMICOLON DEFAULT COLON StmtList BREAK SEMICOLON
Rule 48    CaseList -> CaseList CASE INTNUM COLON StmtList BREAK SEMICOLON DEFAULT COLON StmtList
Rule 49    CaseList -> CaseList CASE INTNUM COLON StmtList DEFAULT COLON StmtList BREAK SEMICOLON
Rule 50    CaseList -> CaseList CASE INTNUM COLON StmtList DEFAULT COLON StmtList
Rule 51    CaseList -> CaseList CASE INTNUM COLON StmtList BREAK SEMICOLON
Rule 52    CaseList -> CaseList CASE INTNUM COLON StmtList
Rule 53    CaseList -> CASE INTNUM COLON StmtList BREAK SEMICOLON DEFAULT COLON StmtList BREAK SEMICOLON
Rule 54    CaseList -> CASE INTNUM COLON StmtList BREAK SEMICOLON DEFAULT COLON StmtList
Rule 55    CaseList -> CASE INTNUM COLON StmtList DEFAULT COLON StmtList BREAK SEMICOLON
Rule 56    CaseList -> CASE INTNUM COLON StmtList DEFAULT COLON StmtList
Rule 57    CaseList -> CASE INTNUM COLON StmtList BREAK SEMICOLON
Rule 58    CaseList -> CASE INTNUM COLON StmtList
Rule 59    CaseList -> DEFAULT COLON StmtList BREAK SEMICOLON
Rule 60    CaseList -> DEFAULT COLON StmtList
Rule 61    CaseList -> <empty>
Rule 62    Expr -> Unop
Rule 63    Expr -> Bioperation
Rule 64    Expr -> Call
Rule 65    Expr -> INTNUM
Rule 66    Expr -> FLOATNUM
Rule 67    Expr -> ID
Rule 68    Expr -> ID LBRK Expr RBRK
Rule 69    Expr -> LPAREN Expr RPAREN
Rule 70    Unop -> MINUS Expr
Rule 71    Bioperation -> Expr PLUS Expr
Rule 72    Bioperation -> Expr MINUS Expr
Rule 73    Bioperation -> Expr TIMES Expr
Rule 74    Bioperation -> Expr DIVIDE Expr
Rule 75    Bioperation -> Expr GT Expr
Rule 76    Bioperation -> Expr LT Expr
Rule 77    Bioperation -> Expr GE Expr
Rule 78    Bioperation -> Expr LE Expr
Rule 79    Bioperation -> Expr EQ Expr
Rule 80    Bioperation -> Expr NE Expr
Rule 81    ArgList -> Expr
Rule 82    ArgList -> ArgList COMMA Expr

Terminals, with rules where they appear

BREAK                : 47 47 48 49 51 53 53 54 55 57 59
CASE                 : 47 48 49 50 51 52 53 54 55 56 57 58
COLON                : 47 47 48 48 49 49 50 50 51 52 53 53 54 54 55 55 56 56 57 58 59 60
COMMA                : 11 17 82
DEFAULT              : 47 48 49 50 53 54 55 56 59 60
DIVIDE               : 74
DO                   : 42
ELSE                 : 45
EQ                   : 79
EQUALS               : 34 35
FLOAT                : 19
FLOATNUM             : 66
FOR                  : 43
GE                   : 77
GT                   : 75
ID                   : 12 13 14 15 34 35 37 38 67 68
IF                   : 44 45
INT                  : 18
INTNUM               : 13 47 48 49 50 51 52 53 54 55 56 57 58 65
LBRACE               : 20 21 46
LBRK                 : 13 35 68
LE                   : 78
LPAREN               : 14 15 37 38 41 42 43 44 45 46 69
LT                   : 76
MINUS                : 70 72
NE                   : 80
PLUS                 : 71
RBRACE               : 20 21 46
RBRK                 : 13 35 68
RETURN               : 39 40
RPAREN               : 14 15 37 38 41 42 43 44 45 46 69
SEMICOLON            : 9 32 33 36 39 40 42 43 43 47 47 48 49 51 53 53 54 55 57 59
SWITCH               : 46
TIMES                : 73
WHILE                : 41 42
error                : 

Nonterminals, with rules where they appear

ArgList              : 37 82
Assign               : 33 43 43
AssignStmt           : 24
Bioperation          : 63
Call                 : 36 64
CallStmt             : 25
CaseList             : 46 47 48 49 50 51 52
CompoundStmt         : 14 15 31
DeclList             : 1 2 6 20
Declaration          : 5 6
Expr                 : 34 35 35 40 41 42 43 44 45 68 69 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 82
ForStmt              : 28
FuncList             : 1 3 8
Function             : 7 8
IdentList            : 9 11
IfStmt               : 29
ParamList            : 15 17
Program              : 0
RetStmt              : 26
Stmt                 : 22 41 42 43 44 45 45
StmtList             : 20 21 22 47 47 48 48 49 49 50 50 51 52 53 53 54 54 55 55 56 56 57 58 59 60
SwitchStmt           : 30
Type                 : 9 14 15 16 17
Unop                 : 62
WhileStmt            : 27
identifier           : 10 11 16 17 46

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . DeclList FuncList
    (2) Program -> . DeclList
    (3) Program -> . FuncList
    (4) Program -> .
    (5) DeclList -> . Declaration
    (6) DeclList -> . DeclList Declaration
    (7) FuncList -> . Function
    (8) FuncList -> . FuncList Function
    (9) Declaration -> . Type IdentList SEMICOLON
    (14) Function -> . Type ID LPAREN RPAREN CompoundStmt
    (15) Function -> . Type ID LPAREN ParamList RPAREN CompoundStmt
    (18) Type -> . INT
    (19) Type -> . FLOAT

    $end            reduce using rule 4 (Program -> .)
    INT             shift and go to state 5
    FLOAT           shift and go to state 6

    Function                       shift and go to state 1
    DeclList                       shift and go to state 2
    FuncList                       shift and go to state 3
    Program                        shift and go to state 4
    Type                           shift and go to state 8
    Declaration                    shift and go to state 7

state 1

    (7) FuncList -> Function .

    INT             reduce using rule 7 (FuncList -> Function .)
    FLOAT           reduce using rule 7 (FuncList -> Function .)
    $end            reduce using rule 7 (FuncList -> Function .)


state 2

    (1) Program -> DeclList . FuncList
    (2) Program -> DeclList .
    (6) DeclList -> DeclList . Declaration
    (7) FuncList -> . Function
    (8) FuncList -> . FuncList Function
    (9) Declaration -> . Type IdentList SEMICOLON
    (14) Function -> . Type ID LPAREN RPAREN CompoundStmt
    (15) Function -> . Type ID LPAREN ParamList RPAREN CompoundStmt
    (18) Type -> . INT
    (19) Type -> . FLOAT

    $end            reduce using rule 2 (Program -> DeclList .)
    INT             shift and go to state 5
    FLOAT           shift and go to state 6

    Function                       shift and go to state 1
    FuncList                       shift and go to state 9
    Type                           shift and go to state 8
    Declaration                    shift and go to state 10

state 3

    (3) Program -> FuncList .
    (8) FuncList -> FuncList . Function
    (14) Function -> . Type ID LPAREN RPAREN CompoundStmt
    (15) Function -> . Type ID LPAREN ParamList RPAREN CompoundStmt
    (18) Type -> . INT
    (19) Type -> . FLOAT

    $end            reduce using rule 3 (Program -> FuncList .)
    INT             shift and go to state 5
    FLOAT           shift and go to state 6

    Function                       shift and go to state 11
    Type                           shift and go to state 12

state 4

    (0) S' -> Program .



state 5

    (18) Type -> INT .

    ID              reduce using rule 18 (Type -> INT .)


state 6

    (19) Type -> FLOAT .

    ID              reduce using rule 19 (Type -> FLOAT .)


state 7

    (5) DeclList -> Declaration .

    SEMICOLON       reduce using rule 5 (DeclList -> Declaration .)
    INT             reduce using rule 5 (DeclList -> Declaration .)
    FLOAT           reduce using rule 5 (DeclList -> Declaration .)
    RETURN          reduce using rule 5 (DeclList -> Declaration .)
    WHILE           reduce using rule 5 (DeclList -> Declaration .)
    DO              reduce using rule 5 (DeclList -> Declaration .)
    FOR             reduce using rule 5 (DeclList -> Declaration .)
    IF              reduce using rule 5 (DeclList -> Declaration .)
    SWITCH          reduce using rule 5 (DeclList -> Declaration .)
    LBRACE          reduce using rule 5 (DeclList -> Declaration .)
    ID              reduce using rule 5 (DeclList -> Declaration .)
    RBRACE          reduce using rule 5 (DeclList -> Declaration .)
    $end            reduce using rule 5 (DeclList -> Declaration .)


state 8

    (9) Declaration -> Type . IdentList SEMICOLON
    (14) Function -> Type . ID LPAREN RPAREN CompoundStmt
    (15) Function -> Type . ID LPAREN ParamList RPAREN CompoundStmt
    (10) IdentList -> . identifier
    (11) IdentList -> . IdentList COMMA identifier
    (12) identifier -> . ID
    (13) identifier -> . ID LBRK INTNUM RBRK

    ID              shift and go to state 14

    identifier                     shift and go to state 15
    IdentList                      shift and go to state 13

state 9

    (1) Program -> DeclList FuncList .
    (8) FuncList -> FuncList . Function
    (14) Function -> . Type ID LPAREN RPAREN CompoundStmt
    (15) Function -> . Type ID LPAREN ParamList RPAREN CompoundStmt
    (18) Type -> . INT
    (19) Type -> . FLOAT

    $end            reduce using rule 1 (Program -> DeclList FuncList .)
    INT             shift and go to state 5
    FLOAT           shift and go to state 6

    Function                       shift and go to state 11
    Type                           shift and go to state 12

state 10

    (6) DeclList -> DeclList Declaration .

    SEMICOLON       reduce using rule 6 (DeclList -> DeclList Declaration .)
    INT             reduce using rule 6 (DeclList -> DeclList Declaration .)
    FLOAT           reduce using rule 6 (DeclList -> DeclList Declaration .)
    RETURN          reduce using rule 6 (DeclList -> DeclList Declaration .)
    WHILE           reduce using rule 6 (DeclList -> DeclList Declaration .)
    DO              reduce using rule 6 (DeclList -> DeclList Declaration .)
    FOR             reduce using rule 6 (DeclList -> DeclList Declaration .)
    IF              reduce using rule 6 (DeclList -> DeclList Declaration .)
    SWITCH          reduce using rule 6 (DeclList -> DeclList Declaration .)
    LBRACE          reduce using rule 6 (DeclList -> DeclList Declaration .)
    ID              reduce using rule 6 (DeclList -> DeclList Declaration .)
    RBRACE          reduce using rule 6 (DeclList -> DeclList Declaration .)
    $end            reduce using rule 6 (DeclList -> DeclList Declaration .)


state 11

    (8) FuncList -> FuncList Function .

    INT             reduce using rule 8 (FuncList -> FuncList Function .)
    FLOAT           reduce using rule 8 (FuncList -> FuncList Function .)
    $end            reduce using rule 8 (FuncList -> FuncList Function .)


state 12

    (14) Function -> Type . ID LPAREN RPAREN CompoundStmt
    (15) Function -> Type . ID LPAREN ParamList RPAREN CompoundStmt

    ID              shift and go to state 16


state 13

    (9) Declaration -> Type IdentList . SEMICOLON
    (11) IdentList -> IdentList . COMMA identifier

    SEMICOLON       shift and go to state 18
    COMMA           shift and go to state 17


state 14

    (14) Function -> Type ID . LPAREN RPAREN CompoundStmt
    (15) Function -> Type ID . LPAREN ParamList RPAREN CompoundStmt
    (12) identifier -> ID .
    (13) identifier -> ID . LBRK INTNUM RBRK

    LPAREN          shift and go to state 19
    SEMICOLON       reduce using rule 12 (identifier -> ID .)
    COMMA           reduce using rule 12 (identifier -> ID .)
    LBRK            shift and go to state 20


state 15

    (10) IdentList -> identifier .

    SEMICOLON       reduce using rule 10 (IdentList -> identifier .)
    COMMA           reduce using rule 10 (IdentList -> identifier .)


state 16

    (14) Function -> Type ID . LPAREN RPAREN CompoundStmt
    (15) Function -> Type ID . LPAREN ParamList RPAREN CompoundStmt

    LPAREN          shift and go to state 19


state 17

    (11) IdentList -> IdentList COMMA . identifier
    (12) identifier -> . ID
    (13) identifier -> . ID LBRK INTNUM RBRK

    ID              shift and go to state 21

    identifier                     shift and go to state 22

state 18

    (9) Declaration -> Type IdentList SEMICOLON .

    SEMICOLON       reduce using rule 9 (Declaration -> Type IdentList SEMICOLON .)
    INT             reduce using rule 9 (Declaration -> Type IdentList SEMICOLON .)
    FLOAT           reduce using rule 9 (Declaration -> Type IdentList SEMICOLON .)
    RETURN          reduce using rule 9 (Declaration -> Type IdentList SEMICOLON .)
    WHILE           reduce using rule 9 (Declaration -> Type IdentList SEMICOLON .)
    DO              reduce using rule 9 (Declaration -> Type IdentList SEMICOLON .)
    FOR             reduce using rule 9 (Declaration -> Type IdentList SEMICOLON .)
    IF              reduce using rule 9 (Declaration -> Type IdentList SEMICOLON .)
    SWITCH          reduce using rule 9 (Declaration -> Type IdentList SEMICOLON .)
    LBRACE          reduce using rule 9 (Declaration -> Type IdentList SEMICOLON .)
    ID              reduce using rule 9 (Declaration -> Type IdentList SEMICOLON .)
    RBRACE          reduce using rule 9 (Declaration -> Type IdentList SEMICOLON .)
    $end            reduce using rule 9 (Declaration -> Type IdentList SEMICOLON .)


state 19

    (14) Function -> Type ID LPAREN . RPAREN CompoundStmt
    (15) Function -> Type ID LPAREN . ParamList RPAREN CompoundStmt
    (16) ParamList -> . Type identifier
    (17) ParamList -> . ParamList COMMA Type identifier
    (18) Type -> . INT
    (19) Type -> . FLOAT

    RPAREN          shift and go to state 23
    INT             shift and go to state 5
    FLOAT           shift and go to state 6

    Type                           shift and go to state 25
    ParamList                      shift and go to state 24

state 20

    (13) identifier -> ID LBRK . INTNUM RBRK

    INTNUM          shift and go to state 26


state 21

    (12) identifier -> ID .
    (13) identifier -> ID . LBRK INTNUM RBRK

    RPAREN          reduce using rule 12 (identifier -> ID .)
    COMMA           reduce using rule 12 (identifier -> ID .)
    SEMICOLON       reduce using rule 12 (identifier -> ID .)
    LBRK            shift and go to state 20


state 22

    (11) IdentList -> IdentList COMMA identifier .

    SEMICOLON       reduce using rule 11 (IdentList -> IdentList COMMA identifier .)
    COMMA           reduce using rule 11 (IdentList -> IdentList COMMA identifier .)


state 23

    (14) Function -> Type ID LPAREN RPAREN . CompoundStmt
    (20) CompoundStmt -> . LBRACE DeclList StmtList RBRACE
    (21) CompoundStmt -> . LBRACE StmtList RBRACE

    LBRACE          shift and go to state 27

    CompoundStmt                   shift and go to state 28

state 24

    (15) Function -> Type ID LPAREN ParamList . RPAREN CompoundStmt
    (17) ParamList -> ParamList . COMMA Type identifier

    RPAREN          shift and go to state 30
    COMMA           shift and go to state 29


state 25

    (16) ParamList -> Type . identifier
    (12) identifier -> . ID
    (13) identifier -> . ID LBRK INTNUM RBRK

    ID              shift and go to state 21

    identifier                     shift and go to state 31

state 26

    (13) identifier -> ID LBRK INTNUM . RBRK

    RBRK            shift and go to state 32


state 27

    (20) CompoundStmt -> LBRACE . DeclList StmtList RBRACE
    (21) CompoundStmt -> LBRACE . StmtList RBRACE
    (5) DeclList -> . Declaration
    (6) DeclList -> . DeclList Declaration
    (22) StmtList -> . Stmt StmtList
    (23) StmtList -> .
    (9) Declaration -> . Type IdentList SEMICOLON
    (24) Stmt -> . AssignStmt
    (25) Stmt -> . CallStmt
    (26) Stmt -> . RetStmt
    (27) Stmt -> . WhileStmt
    (28) Stmt -> . ForStmt
    (29) Stmt -> . IfStmt
    (30) Stmt -> . SwitchStmt
    (31) Stmt -> . CompoundStmt
    (32) Stmt -> . SEMICOLON
    (18) Type -> . INT
    (19) Type -> . FLOAT
    (33) AssignStmt -> . Assign SEMICOLON
    (36) CallStmt -> . Call SEMICOLON
    (39) RetStmt -> . RETURN SEMICOLON
    (40) RetStmt -> . RETURN Expr SEMICOLON
    (41) WhileStmt -> . WHILE LPAREN Expr RPAREN Stmt
    (42) WhileStmt -> . DO Stmt WHILE LPAREN Expr RPAREN SEMICOLON
    (43) ForStmt -> . FOR LPAREN Assign SEMICOLON Expr SEMICOLON Assign RPAREN Stmt
    (44) IfStmt -> . IF LPAREN Expr RPAREN Stmt
    (45) IfStmt -> . IF LPAREN Expr RPAREN Stmt ELSE Stmt
    (46) SwitchStmt -> . SWITCH LPAREN identifier RPAREN LBRACE CaseList RBRACE
    (20) CompoundStmt -> . LBRACE DeclList StmtList RBRACE
    (21) CompoundStmt -> . LBRACE StmtList RBRACE
    (34) Assign -> . ID EQUALS Expr
    (35) Assign -> . ID LBRK Expr RBRK EQUALS Expr
    (37) Call -> . ID LPAREN ArgList RPAREN
    (38) Call -> . ID LPAREN RPAREN

    RBRACE          reduce using rule 23 (StmtList -> .)
    SEMICOLON       shift and go to state 44
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    RETURN          shift and go to state 52
    WHILE           shift and go to state 36
    DO              shift and go to state 41
    FOR             shift and go to state 38
    IF              shift and go to state 42
    SWITCH          shift and go to state 39
    LBRACE          shift and go to state 27
    ID              shift and go to state 40

    StmtList                       shift and go to state 33
    Stmt                           shift and go to state 34
    DeclList                       shift and go to state 35
    Declaration                    shift and go to state 7
    ForStmt                        shift and go to state 45
    IfStmt                         shift and go to state 37
    CallStmt                       shift and go to state 46
    RetStmt                        shift and go to state 47
    AssignStmt                     shift and go to state 48
    CompoundStmt                   shift and go to state 50
    WhileStmt                      shift and go to state 49
    Assign                         shift and go to state 53
    SwitchStmt                     shift and go to state 54
    Call                           shift and go to state 51
    Type                           shift and go to state 43

state 28

    (14) Function -> Type ID LPAREN RPAREN CompoundStmt .

    INT             reduce using rule 14 (Function -> Type ID LPAREN RPAREN CompoundStmt .)
    FLOAT           reduce using rule 14 (Function -> Type ID LPAREN RPAREN CompoundStmt .)
    $end            reduce using rule 14 (Function -> Type ID LPAREN RPAREN CompoundStmt .)


state 29

    (17) ParamList -> ParamList COMMA . Type identifier
    (18) Type -> . INT
    (19) Type -> . FLOAT

    INT             shift and go to state 5
    FLOAT           shift and go to state 6

    Type                           shift and go to state 55

state 30

    (15) Function -> Type ID LPAREN ParamList RPAREN . CompoundStmt
    (20) CompoundStmt -> . LBRACE DeclList StmtList RBRACE
    (21) CompoundStmt -> . LBRACE StmtList RBRACE

    LBRACE          shift and go to state 27

    CompoundStmt                   shift and go to state 56

state 31

    (16) ParamList -> Type identifier .

    RPAREN          reduce using rule 16 (ParamList -> Type identifier .)
    COMMA           reduce using rule 16 (ParamList -> Type identifier .)


state 32

    (13) identifier -> ID LBRK INTNUM RBRK .

    RPAREN          reduce using rule 13 (identifier -> ID LBRK INTNUM RBRK .)
    COMMA           reduce using rule 13 (identifier -> ID LBRK INTNUM RBRK .)
    SEMICOLON       reduce using rule 13 (identifier -> ID LBRK INTNUM RBRK .)


state 33

    (21) CompoundStmt -> LBRACE StmtList . RBRACE

    RBRACE          shift and go to state 57


state 34

    (22) StmtList -> Stmt . StmtList
    (22) StmtList -> . Stmt StmtList
    (23) StmtList -> .
    (24) Stmt -> . AssignStmt
    (25) Stmt -> . CallStmt
    (26) Stmt -> . RetStmt
    (27) Stmt -> . WhileStmt
    (28) Stmt -> . ForStmt
    (29) Stmt -> . IfStmt
    (30) Stmt -> . SwitchStmt
    (31) Stmt -> . CompoundStmt
    (32) Stmt -> . SEMICOLON
    (33) AssignStmt -> . Assign SEMICOLON
    (36) CallStmt -> . Call SEMICOLON
    (39) RetStmt -> . RETURN SEMICOLON
    (40) RetStmt -> . RETURN Expr SEMICOLON
    (41) WhileStmt -> . WHILE LPAREN Expr RPAREN Stmt
    (42) WhileStmt -> . DO Stmt WHILE LPAREN Expr RPAREN SEMICOLON
    (43) ForStmt -> . FOR LPAREN Assign SEMICOLON Expr SEMICOLON Assign RPAREN Stmt
    (44) IfStmt -> . IF LPAREN Expr RPAREN Stmt
    (45) IfStmt -> . IF LPAREN Expr RPAREN Stmt ELSE Stmt
    (46) SwitchStmt -> . SWITCH LPAREN identifier RPAREN LBRACE CaseList RBRACE
    (20) CompoundStmt -> . LBRACE DeclList StmtList RBRACE
    (21) CompoundStmt -> . LBRACE StmtList RBRACE
    (34) Assign -> . ID EQUALS Expr
    (35) Assign -> . ID LBRK Expr RBRK EQUALS Expr
    (37) Call -> . ID LPAREN ArgList RPAREN
    (38) Call -> . ID LPAREN RPAREN

    RBRACE          reduce using rule 23 (StmtList -> .)
    BREAK           reduce using rule 23 (StmtList -> .)
    CASE            reduce using rule 23 (StmtList -> .)
    DEFAULT         reduce using rule 23 (StmtList -> .)
    SEMICOLON       shift and go to state 44
    RETURN          shift and go to state 52
    WHILE           shift and go to state 36
    DO              shift and go to state 41
    FOR             shift and go to state 38
    IF              shift and go to state 42
    SWITCH          shift and go to state 39
    LBRACE          shift and go to state 27
    ID              shift and go to state 40

    StmtList                       shift and go to state 58
    Stmt                           shift and go to state 34
    ForStmt                        shift and go to state 45
    IfStmt                         shift and go to state 37
    CallStmt                       shift and go to state 46
    RetStmt                        shift and go to state 47
    AssignStmt                     shift and go to state 48
    WhileStmt                      shift and go to state 49
    CompoundStmt                   shift and go to state 50
    Call                           shift and go to state 51
    Assign                         shift and go to state 53
    SwitchStmt                     shift and go to state 54

state 35
